add support/resistance lines

--- a/ipython/Tushare.ipynb
+++ b/ipython/Tushare.ipynb
@@ -9,31 +9,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tushare as ts\n",
-    "import pandas as pd\n",
-    "df = ts.get_k_data('600000', start='2012-10-01')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1287, 7)"
+       "name                   湖南盐业\n",
+       "industry                 食品\n",
+       "area                     湖南\n",
+       "pe                        0\n",
+       "outstanding               0\n",
+       "totals                    0\n",
+       "totalAssets          310492\n",
+       "liquidAssets        78859.3\n",
+       "fixedAssets          139874\n",
+       "reserved            24281.5\n",
+       "reservedPerShare          0\n",
+       "esp                       0\n",
+       "bvps                      0\n",
+       "pb                        0\n",
+       "timeToMarket              0\n",
+       "undp                71625.1\n",
+       "perundp                   0\n",
+       "rev                     1.3\n",
+       "profit                15.06\n",
+       "gpr                   47.71\n",
+       "npr                    7.24\n",
+       "holders                   0\n",
+       "Name: 600929, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "import tushare as ts\n",
+    "import pandas as pd\n",
+    "df = ts.get_stock_basics()\n",
+    "\n",
+    "df.loc['600929']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.shape"
    ]
